# mastering-xml

./: .gitignore  CMakeLists.txt  README.md
data/: dom.dot  mediatech.dot
data/XML_database/: book.xsl  bookshop.xml
src/: FindXQilla.cmake  libxml2_demo.cpp  tinyxml2_demo.cpp  tinyxml2_snippet (copy).cpp  tinyxml2_snippet.cpp  xalan_snippet.cpp  xerces_snippet.cpp
youtube-vid/audios/chap1/: CDATA.aup  Characters and Encoding.aup  Declarative Transformation.aup  Document Object Model.aup  Programming Interfaces.aup  XML Data Binding.aup  XML Parser.aup
youtube-vid/audios/chap1/CDATA_data/e08/d08/: e0808061.au  e080817b.au  e0808341.au  e08083c3.au  e0808438.au  e0808442.au  e08084c1.au  e080850c.au  e08085e5.au  e0808603.au  e0808647.au  e08086d3.au  e0808718.au  e080871f.au  e080876e.au  e0808ab7.au  e0808ad5.au  e0808d71.au  e0808dcb.au  e0808dd4.au  e0808eb3.au  e0808f6e.au
youtube-vid/audios/chap1/Characters and Encoding_data/e08/d08/: e0808024.au  e0808247.au  e08082b9.au  e08084b6.au  e08084d4.au  e080860b.au  e080872d.au  e0808764.au  e08087f2.au  e0808881.au  e08088a1.au  e0808923.au  e0808a2c.au  e0808ba0.au  e0808bba.au  e0808dc0.au  e0808e03.au  e0808ecf.au  e0808eeb.au  e0808f4b.au
youtube-vid/audios/chap1/Declarative Transformation_data/e08/d08/: e0808317.au  e08087ad.au  e08087b9.au  e080895c.au  e0808cf0.au  e0808fae.au
youtube-vid/audios/chap1/Document Object Model_data/e08/d08/: e0808104.au  e080826c.au  e080827a.au  e08082b4.au  e08082e1.au  e080839a.au  e0808518.au  e0808587.au  e08085c8.au  e08086cd.au  e0808709.au  e080874d.au  e08087de.au  e0808842.au  e0808846.au  e08088a1.au  e08088a7.au  e08088f1.au  e0808a08.au  e0808a84.au  e0808b0b.au  e0808b32.au  e0808c06.au  e0808cd8.au  e0808d5c.au  e0808dce.au  e0808e6f.au  e0808f26.au  e0808f8b.au  e0808fd6.au
youtube-vid/audios/chap1/Programming Interfaces_data/e08/d08/: e0808135.au  e08081bb.au  e0808284.au  e080831a.au  e08083ee.au  e0808629.au  e080862d.au  e080883a.au  e0808928.au  e0808995.au  e08089be.au  e0808bc2.au  e0808be9.au  e0808f2f.au
youtube-vid/audios/chap1/XML Parser_data/e08/d08/: e0808349.au  e0808753.au  e080877e.au  e080877f.au  e08087c2.au  e08087f0.au  e0808b9f.au  e0808be6.au
youtube-vid/audios/chap2/: SAX.aup  XML DTD.aup  XML Validation.aup  XML XSD.aup  XSD Data Types.aup
youtube-vid/audios/chap2/SAX_data/e08/d08/: e08080bc.au  e08080de.au  e0808120.au  e0808243.au  e080825c.au  e0808702.au  e08087e0.au  e0808813.au  e0808b16.au  e0808bf4.au  e0808d2a.au  e0808e7b.au  e0808f31.au  e0808f77.au
youtube-vid/audios/chap2/XML DTD_data/e08/d08/: e0808024.au  e08081b9.au  e08082a8.au  e0808364.au  e0808426.au  e080860b.au  e08087ba.au  e0808a9b.au  e0808bc1.au  e0808c66.au  e0808cf2.au  e0808ed0.au
youtube-vid/audios/chap2/XML Validation_data/e08/d08/: e0808013.au  e0808069.au  e0808176.au  e08081e7.au  e0808277.au  e08082c9.au  e080854a.au  e080855c.au  e0808583.au  e08085d4.au  e08086c9.au  e080870b.au  e080877c.au  (+15 more)
youtube-vid/audios/chap3/: XML Databases.aup
youtube-vid/audios/chap4/: XSLT.aup
youtube-vid/audios/chap5/: tinyxml2.aup
youtube-vid/audios/intro/: XML Introduction.aup
youtube-vid/images/vecteezy_vector-documents-icon_424583/: Web_(535).eps
youtube-vid/images/vecteezy_vector-edit-icon_443350/: Basic_Ui_(507).eps
youtube-vid/kdenlive/: chap2.kdenlive  intro.kdenlive
(+402 files in other folders)
